# Tender

./: .gitignore  README.org
backend/: CHANGELOG.md  ideas.org  tender.cabal
backend/app/: Db.hs  Main.hs  Restaurant.hs  User.hs  Yelp.hs
frontend/: .postcssrc  Makefile  package.json  postcss.config.js  spago.dhall  tailwind.config.js
frontend/assets/: app.css  app.js  index.html  style.css
frontend/src/: Main.js  Main.purs
