cabal-version:      2.4
name:               tender
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gavin Jaeger-Freeborn
maintainer:         gavinfreeborn@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tender
    main-is:          Main.hs
    other-modules: Db, Restaurant, Yelp, User

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson >= 2.1.1.0, base ^>=4.16.3.0, bytestring >= 0.11.3.1, containers >= 0.6.5.1, http-client, http-client-tls >= 0.3.6.1, http-conduit, http-types >= 0.12.3, random >= 1.2.1.1, scotty >= 0.12, sqlite-simple >= 0.4.18.0, text >= 1.2.5.0, uuid >= 1.3.15, wai-cors >= 0.2.7, yaml >= 0.11.8.0
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -Wall -O2
    optimization: 2
    profiling: True
